Use enum for bulk import platform in client